--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,9 @@
-#header{
+.header{
     text-decoration: dotted;
     color: aquamarine;
+    font-family: "Cedarville Cursive", cursive;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .button{
